# pdcurses-switch

./: CMakeLists.txt  curses.h.gch
demos/: CMakeLists.txt
pdcurses/: CMakeLists.txt
sdl1/: pdcscrn.c
sdl2/: CMakeLists.txt  Makefile  Untitled-1.patch  firework  firework.nro  ozdemo  pdcdisp.c  pdckbd.c  pdcscrn.c  pdcutil.c  ptest  ptest.nro  rain  rain.nro  sdltest  sdltest.nro  testcurs  tuidemo  tuidemo.nro  worm  worm.nro  xmas  xmas.nro
sdl2/vkeyboard/: int10font14.c  vkeybd.h  vkeykb.cpp
